compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__prelude__qualified_nil.snap
---
source: compiler-core/src/javascript/tests/prelude.rs
assertion_line: 32
expression: "import rakun\npub fn go() { rakun.Nil }\n"
---
----- SOURCE CODE
import rakun
pub fn go() { rakun.Nil }


----- COMPILED JAVASCRIPT
import * as $rakun from "../rakun.mjs";

export function go() {
  return undefined;
}
