compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__prelude__qualified_nil_typescript.snap
---
source: compiler-core/src/javascript/tests/prelude.rs
expression: "import rakun\npub fn go() { rakun.Nil }\n"
---
import type * as $rakun from "../rakun.d.mts";

export function go(): undefined;
